Update and rename 패널데이터.ipynb to 시계열데이터_융해.ipynb

--- a/code/시계열데이터_융해.ipynb
+++ b/code/시계열데이터_융해.ipynb
@@ -20,8 +20,8 @@
     "from datetime import time\n",
     "import copy\n",
     "\n",
-    "data['영상 요청 시작일'] = pd.to_datetime(data['영상 요청 시작일'])\n",
-    "data['영상 요청 종료일'] = pd.to_datetime(data['영상 요청 종료일'])"
+    "data['영상 요청 시작일'] = pd.to_datetime(data['시작일'])\n",
+    "data['영상 요청 종료일'] = pd.to_datetime(data['종료일'])"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "source": [
     "per_hour = []\n",
     "\n",
-    "for start, end in zip(data['영상 요청 시작일'], data['영상 요청 종료일']):\n",
+    "for start, end in zip(data['시작일'], data['종료일']):\n",
     "    per = pd.period_range(start = start,\n",
     "                         end = end,\n",
     "                         freq = 'H')\n",
